<resources>
    <string name="app_name">XmlStudyNavigation</string>
    <string name="my_app_hub">My app Hub (XML)</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="say_hello">Say Hello</string>
    <string name="hello_world_view">Hello World view</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="male_icon">Male Icon</string>
    <string name="female_icon">Female Icon</string>
    <string name="height">height</string>
    <string name="height_format">%1$dcm</string>
    <string name="_120cm">120cm</string>
    <string name="weight">weight</string>
    <string name="_70">70</string>
    <string name="age">age</string>
    <string name="age_number">20</string>
    <string name="calculate">Calculate</string>
    <string name="result_IMC">Result</string>
    <string name="calculate_again">Calculate Again</string>
    <string name="imc_result_total">50.0</string>
    <string name="imc_description_final">Description</string>

    <string name="low_weight">Underweight</string>
    <string name="low_weight_description">Your body weight is below the normal range. Consider consulting with a healthcare provider.</string>

    <string name="normal_weight">Normal Weight</string>
    <string name="normal_weight_description">Your body weight is within the normal range. Keep up with your healthy habits!</string>

    <string name="over_weight">Overweight</string>
    <string name="over_weight_description">Your body weight is above the normal range. Consider adopting a healthier lifestyle.</string>

    <string name="obesity">Obesity</string>
    <string name="obesity_description">Your body weight is significantly above the normal range. It is advisable to seek advice from a healthcare provider.</string>

    <string name="error_weight">Error</string>
    <string name="error_weight_description">There was an issue calculating your BMI. Please try again.</string>
    <string name="todo_make_your_tasks_done">ToDo make your dreams done</string>
    <string name="button_text_imc_calculator">IMC Calculator</string>
    <string name="button_text_todo_app">ToDo APP</string>
    <string name="categories_title_text">Categories:</string>
    <string name="tasks_textview">Tasks:</string>
    <string name="add_task_fav">Add task</string>
    <string name="add_a_new_task_hint">Press to add a new task</string>
    <string name="learning_radiobutton_text">Learning</string>
    <string name="learning_radiobutton_exercise">Exercise</string>
    <string name="learning_radiobutton_hobbies">Hobbies</string>
    <string name="learning_radiobutton_other">other</string>
    <string name="add_task_button_text">add task</string>
    <string name="super_heroes_string_resource">super heroes</string>
    <string name="superhero_image_image_view">SuperHero Image</string>
    <string name="alter_egos_label">alter egos:</string>
    <string name="first_appearance_label">First appearance:</string>
    <string name="alignment_label">Alignment:</string>
    <string name="aliases_label">Aliases:</string>
    <string name="intelligence_label_stat">Intelligence</string>
    <string name="strength_label_stat">Strength</string>
    <string name="speed_label_stat">Speed</string>
    <string name="durability_label_stat">Durability</string>
    <string name="power_label_stat">Power</string>
    <string name="combat_label_stat">Combat</string>
    <string name="relatives_label">Relatives:</string>
    <string name="group_affiliation_label">Affiliations:</string>
    <string name="settings_button_text">Settings</string>
    <string name="dark_mode_text">Dark mode</string>
    <string name="bluetooth_text">Notifications</string>
    <string name="vibration_text">Vibration mode</string>
    <string name="dark_mode_description_text">Dark mode should make it easier for your eyes to adjust from your dimly lit surroundings to your phone screen, reducing screen glare</string>
    <string name="bluetooth_description_text">Activate | deactivate bluetooth</string>
    <string name="vibration_description_text">Activate | deactivate Vibration</string>
    <string name="volume_text">Volume</string>
    <string name="volume_slider_text">Volume slider</string>
    <string name="increase_or_decrease_volume_text">increase or decrease volume</string>


</resources>