<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/my_app_hub"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ButtonHelloWorld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_menu_style"
                android:padding="20dp"
                android:text="Hello World!"
                android:textColor="@color/black"
                android:textStyle="italic" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ButtonImcCalculator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_menu_style"
                android:padding="20dp"
                android:text="@string/button_text_imc_calculator"
                android:textColor="@color/black"
                android:textStyle="italic" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ButtonToDoApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_menu_style"
                android:padding="20dp"
                android:text="@string/button_text_todo_app"
                android:textColor="@color/black"
                android:textStyle="italic" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ButtonSuperHero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_menu_style"
                android:padding="20dp"
                android:text="@string/super_heroes_string_resource"
                android:textColor="@color/black"
                android:textStyle="italic" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ButtonSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_menu_style"
                android:padding="20dp"
                android:text="@string/settings_button_text"
                android:textColor="@color/black"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>